--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^7.3.7",
+    "@angular/cdk": "^8.0.1",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/core": "^8.0.0",
     "@angular/forms": "~7.2.0",
-    "@angular/material": "^7.3.7",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "angularx-social-login": "^1.2.7",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.9",
     "firebase-tools": "^6.11.0",
     "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -47,6 +47,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   }
 }
