--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@angular/compiler": "~8.0.0",
     "@angular/core": "^8.0.0",
     "@angular/forms": "~8.0.0",
-    "@angular/material": "^8.0.0",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "@angular/upgrade": "^8.0.0",
     "angularx-social-login": "^1.2.7",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
