--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -1,7 +1,11 @@
 {
+  "env": {
+    "node": true,
+    "es6": true
+  },
   "parserOptions": {
     // Required for certain syntax usages
-    "ecmaVersion": 6
+    "ecmaVersion": 8
   },
   "plugins": [
     "promise"
