--- a/functions/package.json
+++ b/functions/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-functions": "^2.2.0",
+    "nodemailer": "6.2.1",
+    "nodemailer-smtp-transport": "^2.7.4"
   },
   "devDependencies": {
-    "eslint": "^5.12.0",
+    "eslint": "^6.0.0",
     "eslint-plugin-promise": "^4.0.1"
   },
   "private": true
