--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~8.0.0",
     "@angular/upgrade": "^8.0.0",
     "angularx-social-login": "^1.2.7",
+    "firebase-tools": "^6.11.0",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
