--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
     "@angular/core": "^8.0.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "8.0.0",
     "@angular/material": "^8.0.1",
     "@angular/platform-browser": "8.0.0",
@@ -23,6 +24,7 @@
     "@angular/router": "8.0.0",
     "angularx-social-login": "^1.2.7",
     "core-js": "3.0.1",
+    "firebase": "^6.1.1",
     "firebase-tools": "^6.11.0",
     "rxjs": "~6.5.2",
     "tslib": "1.9.3",
