--- a/functions/package.json
+++ b/functions/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "8"
+  },
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
@@ -11,12 +14,12 @@
   },
   "dependencies": {
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0",
+    "firebase-functions": "^3.0.1",
     "nodemailer": "6.2.1",
     "nodemailer-smtp-transport": "^2.7.4"
   },
   "devDependencies": {
-    "eslint": "^6.0.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-promise": "^4.0.1"
   },
   "private": true
