--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "8.0.0",
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
+    "ajv": "^6.10.0",
     "angularx-social-login": "^1.2.7",
     "core-js": "3.0.1",
     "firebase": "^6.1.1",
