--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^3.0.1",
     "nodemailer": "6.2.1",
+    "google-auth-library": "^4.2.2",
     "nodemailer-smtp-transport": "^2.7.4"
   },
   "devDependencies": {
