--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "8.0.0",
     "ajv": "^6.10.0",
     "angularx-social-login": "^1.2.7",
+    "bootstrap": "^4.3.1",
     "core-js": "3.0.1",
     "firebase": "^6.1.1",
     "firebase-tools": "^6.11.0",
