--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -92,8 +92,8 @@
 
     // Disallow await inside of loops
     "no-await-in-loop": 2,
-    "skipStrings": true,
-    "skipTemplates": true,
+    "skipStrings": 0,
+    "skipTemplates": 0,
     // Disallow comparing against -0
     "no-compare-neg-zero": 2,
 
