--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.802.1",
     "@angular/animations": "8.0.0",
     "@angular/cdk": "^8.0.1",
     "@angular/common": "8.0.0",
@@ -33,7 +34,6 @@
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.2",
     "@angular/cli": "~8.0.2",
     "@angular/compiler-cli": "8.0.0",
     "@angular/language-service": "8.0.0",
